--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,10 @@
 
 {% block title %}تسجيل الدخول{% endblock %}
 
+{% block meta_description %}سجل الدخول إلى بنك الأفكار لمشاركة أفكارك والتفاعل مع المجتمع.{% endblock %}
+
+{% block robots %}noindex, nofollow{% endblock %}
+
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-6">
