--- a/templates/register.html
+++ b/templates/register.html
@@ -2,6 +2,10 @@
 
 {% block title %}إنشاء حساب{% endblock %}
 
+{% block meta_description %}أنشئ حساباً جديداً في بنك الأفكار وابدأ بمشاركة أفكارك مع المجتمع.{% endblock %}
+
+{% block robots %}noindex, nofollow{% endblock %}
+
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-6">
