إضافة Google Analytics tag

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,16 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@400;500;600;700&display=swap" rel="stylesheet" crossorigin="anonymous">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JPR2X8JV8F"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-JPR2X8JV8F');
+    </script>
+    
     <!-- Additional Meta Tags Block -->
     {% block extra_meta %}{% endblock %}
     
