تحديث قائمة التصنيفات لتشمل جميع التصنيفات الموجودة في قاعدة البيانات

--- a/templates/edit_idea.html
+++ b/templates/edit_idea.html
@@ -20,11 +20,25 @@
                             <label for="category" class="form-label">التصنيف</label>
                             <select class="form-select" id="category" name="category" required>
                                 <option value="">اختر التصنيف</option>
-                                <option value="تكنولوجيا" {% if idea.category == 'تكنولوجيا' %}selected{% endif %}>تكنولوجيا</option>
-                                <option value="تعليم" {% if idea.category == 'تعليم' %}selected{% endif %}>تعليم</option>
-                                <option value="صحة" {% if idea.category == 'صحة' %}selected{% endif %}>صحة</option>
-                                <option value="بيئة" {% if idea.category == 'بيئة' %}selected{% endif %}>بيئة</option>
+                                <option value="أعمال" {% if idea.category == 'أعمال' %}selected{% endif %}>أعمال</option>
+                                <option value="إدارة" {% if idea.category == 'إدارة' %}selected{% endif %}>إدارة</option>
                                 <option value="اجتماعي" {% if idea.category == 'اجتماعي' %}selected{% endif %}>اجتماعي</option>
+                                <option value="بيئة" {% if idea.category == 'بيئة' %}selected{% endif %}>بيئة</option>
+                                <option value="تجارة" {% if idea.category == 'تجارة' %}selected{% endif %}>تجارة</option>
+                                <option value="تحليل" {% if idea.category == 'تحليل' %}selected{% endif %}>تحليل</option>
+                                <option value="تسويق" {% if idea.category == 'تسويق' %}selected{% endif %}>تسويق</option>
+                                <option value="تصميم" {% if idea.category == 'تصميم' %}selected{% endif %}>تصميم</option>
+                                <option value="تعليم" {% if idea.category == 'تعليم' %}selected{% endif %}>تعليم</option>
+                                <option value="تقنية" {% if idea.category == 'تقنية' %}selected{% endif %}>تقنية</option>
+                                <option value="تكنولوجيا" {% if idea.category == 'تكنولوجيا' %}selected{% endif %}>تكنولوجيا</option>
+                                <option value="صحة" {% if idea.category == 'صحة' %}selected{% endif %}>صحة</option>
+                                <option value="عمارة" {% if idea.category == 'عمارة' %}selected{% endif %}>عمارة</option>
+                                <option value="فن" {% if idea.category == 'فن' %}selected{% endif %}>فن</option>
+                                <option value="قراءة" {% if idea.category == 'قراءة' %}selected{% endif %}>قراءة</option>
+                                <option value="كتابة" {% if idea.category == 'كتابة' %}selected{% endif %}>كتابة</option>
+                                <option value="مجتمع" {% if idea.category == 'مجتمع' %}selected{% endif %}>مجتمع</option>
+                                <option value="محتوى" {% if idea.category == 'محتوى' %}selected{% endif %}>محتوى</option>
+                                <option value="نشر" {% if idea.category == 'نشر' %}selected{% endif %}>نشر</option>
                                 <option value="أخرى" {% if idea.category == 'أخرى' %}selected{% endif %}>أخرى</option>
                             </select>
                         </div>
