--- a/templates/submit_idea.html
+++ b/templates/submit_idea.html
@@ -17,11 +17,25 @@
                         <label for="category" class="form-label">التصنيف</label>
                         <select class="form-select" id="category" name="category" required>
                             <option value="">اختر التصنيف</option>
-                            <option value="تكنولوجيا">تكنولوجيا</option>
-                            <option value="تعليم">تعليم</option>
-                            <option value="صحة">صحة</option>
-                            <option value="بيئة">بيئة</option>
+                            <option value="أعمال">أعمال</option>
+                            <option value="إدارة">إدارة</option>
                             <option value="اجتماعي">اجتماعي</option>
+                            <option value="بيئة">بيئة</option>
+                            <option value="تجارة">تجارة</option>
+                            <option value="تحليل">تحليل</option>
+                            <option value="تسويق">تسويق</option>
+                            <option value="تصميم">تصميم</option>
+                            <option value="تعليم">تعليم</option>
+                            <option value="تقنية">تقنية</option>
+                            <option value="تكنولوجيا">تكنولوجيا</option>
+                            <option value="صحة">صحة</option>
+                            <option value="عمارة">عمارة</option>
+                            <option value="فن">فن</option>
+                            <option value="قراءة">قراءة</option>
+                            <option value="كتابة">كتابة</option>
+                            <option value="مجتمع">مجتمع</option>
+                            <option value="محتوى">محتوى</option>
+                            <option value="نشر">نشر</option>
                             <option value="أخرى">أخرى</option>
                         </select>
                     </div>
